@@ -2042,3 +2042,4 @@
 * pheno:   modified foxX's code to update players ready state during
            intermission
 * pheno:   reworked the way how ready state was sent to the client
+* pheno:   removed weapon auto switching on enabled panzerwar mode
